--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -44,6 +44,6 @@ $breakpoint argument choices :
                 @media only screen and (min-width: 112.5em){@content };         //1800px
         }   
         @if $breakpoint == sixteen-h{
-                @media only screen and (min-width: 100em){@content };         //1800px
+                @media only screen and (max-width: 100em){@content };           //1600px
         }   
 }
