--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@
 @import 'components/form';
 @import 'components/story';
 @import 'components/nav';
+@import 'components/popup';
+@import 'components/paginate';
 
 @import 'layout/footer';
 @import 'layout/grid';
@@ -23,5 +25,6 @@
 
 
 @import 'pages/detail';
+@import 'pages/extras';
 @import 'pages/home';
 @import 'pages/profile';
